add download userList without @RestController

--- a/src/main/resources/templates/adminHome.html
+++ b/src/main/resources/templates/adminHome.html
@@ -68,7 +68,8 @@
             </tr>
         </tbody>
     </table>
-
+    <hr/>
+    <a th:href="@{/admin/userList.xlsx}">Download User List</a>
 
     <hr>
     <hr>
